fix: change external param to swapper (#234)
* Move swapper into rawGetOrderParams and put offerer in GetOrderParams

* add comment and fix swagger

* pass tests

* prettier#
