# swagger.json
@@ -62,7 +62,7 @@
             "$ref": "#/components/parameters/orderHashesParam"
           },
           {
-            "$ref": "#/components/parameters/offererParam"
+            "$ref": "#/components/parameters/swapperParam"
           },
           {
             "$ref": "#/components/parameters/sortKeyParam"
@@ -171,10 +171,10 @@
           "example": "orderHash,orderHash,orderHash"
         }
       },
-      "offererParam": {
-        "name": "offerer",
+      "swapperParam": {
+        "name": "swapper",
         "in": "query",
-        "description": "Filter by offerer address.",
+        "description": "Filter by swapper address.",
         "required": false,
         "schema": {
           "type": "string",
@@ -317,7 +317,7 @@
           "chainId": {
             "$ref": "#/components/schemas/ChainId"
           },
-          "offerer": {
+          "swapper": {
             "type": "string"
           },
           "reactor": {
@@ -368,7 +368,7 @@
           "orderHash",
           "orderStatus",
           "chainId",
-          "offerer",
+          "swapper",
           "reactor",
           "decayStartTime",
           "decayEndTime",
